syntax = "proto3";

package relation.v1;

service Relation
{
    rpc CreateRelation (CreateRelationRequest) returns (CreateRelationResponse);
}

message CreateRelationRequest
{
    string subject = 1;
    string actor = 2;

    string ssn = 3;
    string tin = 4;
}

message CreateRelationResponse
{
    bool success = 1;
    string error_message = 2;
}
